# flowtube

./: .gitignore  .readthedocs.yaml  README.md  bump_version.sh  pyproject.toml  requirements.txt  requirements_txt.txt
.github/workflows/: build_docs.yml  ci.yml  publish.yml
docs/docs/: .buildinfo  .buildinfo.bak  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/docs/.doctrees/: api.doctree  environment.pickle  index.doctree
docs/docs/.doctrees/_autosummary/: flowtube.BoatReactor.doctree  flowtube.CoatedWallReactor.doctree  flowtube.diffusion_coef.doctree  flowtube.flow_calc.doctree  flowtube.kinetics.doctree  flowtube.tools.doctree  flowtube.viscosity_density.doctree
docs/docs/.doctrees/api/: flowtube.doctree  modules.doctree
docs/docs/_autosummary/: flowtube.BoatReactor.html  flowtube.CoatedWallReactor.html  flowtube.diffusion_coef.html  flowtube.flow_calc.html  flowtube.kinetics.html  flowtube.tools.html  flowtube.viscosity_density.html
docs/docs/_modules/: index.html  typing.html
docs/docs/_modules/flowtube/: boat_reactor.html  coated_wall_reactor.html  diffusion_coef.html  flow_calc.html  kinetics.html  tools.html  viscosity_density.html
docs/docs/_sources/: api.rst.txt  index.rst.txt
docs/docs/_sources/_autosummary/: flowtube.BoatReactor.rst.txt  flowtube.flow_calc.rst.txt  flowtube.kinetics.rst.txt  flowtube.tools.rst.txt
docs/docs/_sources/api/: flowtube.rst.txt  (+1 more)
docs/docs/api/: flowtube.html  modules.html
docs/src/: 01_example_usage.ipynb  changelog.rst  conf.py  index.rst  requirements.txt  test.py
docs/src/_autosummary/: flowtube.CoatedWallReactor.rst  flowtube.diffusion_coef.rst  flowtube.viscosity_density.rst
examples/: boat_reactor_example.py  coated_wall_reactor.py  coated_wall_reactor_example.py
flowTube/: __init__.py  coated_wall_reactor.py  diffusion_coef.py  flowTube.py  flow_calc.py  viscosity_density.py
flowtube/: __init__.py  __init__.pyi  boat_reactor.py  coated_wall_reactor.py  diffusion_coef.py  flow_calc.py  kinetics.py  tools.py  viscosity_density.py
tests/: conftest.py  test_CWR_errors.py  test_boat_reactor_errors.py  test_common_errors.py  test_diffusion_corrected_uptake.py  test_examples.py  test_vapor_pressure_to_MR.py
