[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowtube"
version = "1.3.0"
authors = [
  { name = "Corey Pedersen", email = "coreyped@gmail.com" },
]
description = "A Python package for transport and diffusion calculations in cylindrical flow reactors"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["flow reactor", "diffusion", "transport", "coated wall reactor", "aerosol", "atmospheric chemistry"]

dependencies = [
    "numpy>=1.18.0",
    "pandas>=1.0.0", 
    "tabulate>=0.8.0",
    "molmass>=2019.1.1",
    "requests>=2.22.0",
    "scipy>=1.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]
dev = [
    "build>=1.0.0",
    "twine>=6.0.0",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx_autodoc_typehints",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-mdinclude",
    "sphinx-autoapi>=3.0.0",
    "ipykernel>=7.0.0",
    "nbsphinx",
]

[project.urls]
Homepage = "https://github.com/c-pedersen/flowtube"
Repository = "https://github.com/c-pedersen/flowtube"
Documentation = "https://github.com/c-pedersen/flowtube#readme"
"Bug Tracker" = "https://github.com/c-pedersen/flowtube/issues"

[tool.setuptools]
packages = ["flowtube"]

[tool.setuptools.package-data]
flowtube = ["py.typed", "*.pyi"]

[tool.pyright]
include = ["flowtube"]
exclude = ["**/__pycache__"]
typeCheckingMode = "standard"

[tool.ruff.lint.pycodestyle]
max-doc-length = 72
max-line-length = 88

# pyproject.toml
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["flowtube"]